--- a/src/app/components/experience/experience.component.scss
+++ b/src/app/components/experience/experience.component.scss
@@ -1,31 +1,49 @@
-.hover{
-    background-color: white;
-    &:hover{
-        background-color: rgb(245, 245, 245);
-        cursor: pointer;
-    }
-}
-.cdk-drag-preview {
-    box-sizing: border-box;
+.hover {
+  background-color: white;
+
+  &:hover {
     background-color: rgb(245, 245, 245);
-    // border-radius: 4px;
-    // box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-    //             0 8px 10px 1px rgba(0, 0, 0, 0.14),
-    //             0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
   }
-  
-  .cdk-drag-placeholder {
-    opacity: 0;
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  background-color: rgb(245, 245, 245);
+  // border-radius: 4px;
+  // box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+  //             0 8px 10px 1px rgba(0, 0, 0, 0.14),
+  //             0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.hover:last-child {
+  border: none;
+}
+
+.hover.cdk-drop-list-dragging .hover:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.component-image-container {
+  background-color: red;
+  width: 75px;
+  height: 75px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .component-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
-  
-  .cdk-drag-animating {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-  }
-  
-  .hover:last-child {
-    border: none;
-  }
-  
-  .hover.cdk-drop-list-dragging .hover:not(.cdk-drag-placeholder) {
-    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-  }
+}
