--- a/src/app/components/user-header/user-header.component.html
+++ b/src/app/components/user-header/user-header.component.html
@@ -1,15 +1,15 @@
 <div class="container position-relative" style="max-width: 812px;">
     <button class="btn p-0 border-0 fs-4 text me-3 position-absolute top-100 end-0" style="z-index: 1;" data-bs-toggle="modal" data-bs-target="#profileModal"><i class="bi bi-pencil-square"></i></button>
-    <div class="row-auto">
-        <div class="w-100 bg-secondary" style="min-height: 250px; max-height: 250px; overflow: hidden;">
-            <!-- <img class="img-fluid mx-auto d-block" src="media/Rectangle 6.svg" alt=""> -->
-        </div>
+    <div class="banner-container w-100 row-auto">
+        <img class="banner-image" src="/assets/imgs/1.png" alt="">
+        <!-- <div class="w-100 bg-secondary" style="min-height: 250px; max-height: 250px; overflow: hidden;">
+        </div> -->
     </div>
     <div class="container position-absolute top-100 start-50 translate-middle px-lg-4">
-        <div class="row mb-3">
-            <div class="col-12 col-sm-auto mb-3 mb-sm-0">
-                <img class="mx-auto ms-sm-3 d-block rounded-circle" width="150" height="150"
-                    src="assets/imgs/Rectangle 6.svg" alt="">
+        <div class="row mb-3 ms-lg-3">
+            <div class="col-12 col-sm-auto mb-3 mb-sm-0 p-0 profile-image-container me-lg-2">
+                <img class="profile-image"
+                    src="/assets/imgs/pepetest.png" alt="">
             </div>
             <div class="col-12 col-sm align-self-end ps-sm-0">
                 <h2 class="mb-0 fw-bold">{{headerData.name}}</h2>
