--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -14,7 +14,7 @@
         <div class="column" [ngClass]="{'hover': isEdit}" *ngFor="let experience of experienceData" cdkDrag [cdkDragDisabled]="!isEdit">
             <div class="col mb-4">
                 <div class="row p-0 m-0 mb-2 mb-md-1">
-                    <div class="col-auto p-0 component-image-container">
+                    <div class="col-auto p-0 component-image-container" cdkDragHandle>
                         <img class="component-image" src={{experience.company.src}} alt={{experience.company.alt}}>
                     </div>
                     <div class="col">
