--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -32,18 +32,7 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.project-img-container {
-  background-color: green;
+.component-image-container {
   min-width: 350px;
   min-height: 200px;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  .project-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
 }
