--- a/src/app/components/skillz/skillz.component.scss
+++ b/src/app/components/skillz/skillz.component.scss
@@ -32,13 +32,7 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.skill-img-container {
-  background-color: green;
+.component-image-container {
   width: 51px;
   height: 51px;
-  .skill-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
 }
