--- a/src/app/components/education-module/education-module.component.html
+++ b/src/app/components/education-module/education-module.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade" tabindex="-1" id="educationModal">
+<div class="modal fade" tabindex="-1" [id]="modalId">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content rounded-0">
             <div class="modal-header">
@@ -13,19 +13,19 @@
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label fw-bold">Name</label>
                     <input class="form-control form-control-sm" type="text" placeholder="Argentina Programa (Full Stack Developer)"
-                        aria-label="name input">
+                        aria-label="name input" [value]="name">
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label fw-bold">Education Time</label>
                     <div class="d-flex">
-                        <input class="form-control form-control-sm" type="date" aria-label="start date input">
+                        <input class="form-control form-control-sm" type="date" aria-label="start date input" [value]="initDate">
                         <p class="m-0 px-2">-</p>
-                        <input class="form-control form-control-sm" type="date" aria-label="end date input">
+                        <input class="form-control form-control-sm" type="date" aria-label="end date input" [value]="endDate">
                     </div>
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label fw-bold">About</label>
-                    <textarea class="form-control" id="about" rows="3"></textarea>
+                    <textarea class="form-control" id="about" rows="3" [value]="about"></textarea>
                 </div>
             </div>
             <div class="modal-footer">
