--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,22 +13,45 @@
                 </div>
             </div>
             <div class="col-auto">
-                <div class="row align-items-center justify-content-end">
+                <div class="row align-items-center justify-content-end desktop-menu">
                     <div class="col-auto ps-0">
                         <div class="btn-group" role="group">
-                            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle rounded-0" 
+                            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle rounded-0"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Socials
                             </button>
-                            <ul class="dropdown-menu rounded-0" aria-labelledby="btnGroupDrop1" *ngFor="let social of socialLinks" >
-                                <li><a class="dropdown-item" href={{social.link}}><i class={{social.icon}}></i> {{social.name}}</a></li>
+                            <ul class="dropdown-menu rounded-0" aria-labelledby="btnGroupDrop1"
+                                *ngFor="let social of socialLinks">
+                                <li><a class="dropdown-item" href={{social.link}}><i class={{social.icon}}></i>
+                                        {{social.name}}</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-auto ps-0">
-                        <button type="button" data-bs-toggle="modal" data-bs-target="#loginModal" class="btn btn-outline-light rounded-0 pt-1 pb-2 px-4">Login</button>
+                        <button type="button" data-bs-toggle="modal" data-bs-target="#loginModal"
+                            class="btn btn-outline-light rounded-0 pt-1 pb-2 px-4">Login</button>
                     </div>
                 </div>
+                <div class="mobile-menu row align-items-center justify-content-end" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                    <i class="burger bi bi-list w-auto"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="offcanvas mobile-menu offcanvas-end text-bg-primary" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+        <div class="offcanvas-header">
+            <div class="col-auto ps-0">
+                <button type="button" data-bs-toggle="modal" data-bs-target="#loginModal"
+                    class="btn btn-outline-light rounded-0 pt-1 pb-2 px-4">Login</button>
+            </div>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body mh-100 overflow-auto pb-5">
+            <div class="mb-5">
+                <ul class="list-group" *ngFor="let social of socialLinks">
+                    <li class="list-group-item"><a class="fs-3 text-dark" href={{social.link}}><i class={{social.icon}}></i> {{social.name}}</a></li>
+                </ul>
             </div>
         </div>
     </div>
