--- a/src/app/components/profile-module/profile-module.component.html
+++ b/src/app/components/profile-module/profile-module.component.html
@@ -16,15 +16,15 @@
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label fw-bold">Full Name</label>
-                    <input class="form-control form-control-sm" type="text" placeholder="Ernesto Pedrastra" aria-label="name input">
+                    <input class="form-control form-control-sm" type="text" placeholder="Ernesto Pedrastra" aria-label="name input" [value]="fullName">
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label fw-bold">Job Title</label>
-                    <input class="form-control form-control-sm" type="text" placeholder="Sr. Pancake" aria-label="name input">
+                    <input class="form-control form-control-sm" type="text" placeholder="Sr. Pancake" aria-label="name input" [value]="jobTitle">
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label fw-bold">About</label>
-                    <textarea class="form-control" id="about" rows="3"></textarea>
+                    <textarea class="form-control" id="about" rows="3" [value]="about"></textarea>
                 </div>
                 <div class="">
                     <div class="row">
@@ -51,8 +51,8 @@
                         <button class="btn btn-primary rounded-0 btn-sm" type="submit">Add</button>
                     </div>
                     <ul class="p-0">
-                        <li class="row">
-                            <i class="bi bi-github col-1"></i><p class="col m-0">Github</p><button class="btn col-1 p-0 border-0"><i class="bi bi-trash-fill"></i></button>
+                        <li class="row my-2" *ngFor="let link of links">
+                            <i class="col-1" [ngClass]="link.icon"></i><p class="col m-0 p-0">{{link.name}}</p><button class="btn col-1 p-0 border-0"><i class="bi bi-trash-fill"></i></button>
                         </li>
                     </ul>
                 </div>
